# riddle

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README-en.md  README.md  payload.json
.github/workflows/: nightly.yml  release.yml
app/clue/: Cargo.toml  README-en.md  README.md
app/clue/src/: build.rs  lib.rs  main.rs  manifest.rs  package.rs  project.rs
app/clue/tests/: clue.rs  commands.rs
app/info-viz/: Cargo.toml  build.rs
app/info-viz/assets/: app.js  index.html  style.css
app/info-viz/src/: app.rs  html.rs  http.rs  main.rs  web.rs
app/info-viz/src/render/: delta.rs  format.rs  layout.rs  mod.rs  svg.rs
app/riddle-lsp/: Cargo.toml
app/riddle-lsp/src/: diagnostics.rs  main.rs
app/riddlec/: Cargo.toml  build.rs
app/riddlec/src/: c_compiler.rs  diagnostics.rs  lib.rs  main.rs  pipeline.rs
app/scope-graph-viz/: Cargo.toml
app/scope-graph-viz/assets/: app.js  index.html  style.css
app/scope-graph-viz/src/: app.rs  edit.rs  http.rs  main.rs
app/scope-graph-viz/src/render/: delta.rs  format.rs  layout.rs  mod.rs  svg.rs
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  node.rs  support.rs
crates/escape-analysis/: Cargo.toml
crates/escape-analysis/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: incremental.rs  lexer.rs  lib.rs  parser.rs  syntax_kind.rs  tree_builder.rs
crates/gc/: Cargo.toml  README.md
crates/gc/src/: lib.rs  runtime.c
crates/hir/: Cargo.toml
crates/hir/src/: body.rs  body_lower.rs  item_tree.rs  lib.rs  lower.rs  place.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/mir/: Cargo.toml
crates/mir/src/: block.rs  builder.rs  display.rs  func.rs  instr.rs  lib.rs  lower.rs  module.rs  types.rs  value.rs
crates/mir/src/backend/: c.rs  cranelift.rs  js.rs  lua.rs  mod.rs
crates/move-checker/: Cargo.toml
crates/move-checker/src/: lib.rs  reference_flow.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/scope-graph/: Cargo.toml
crates/scope-graph/src/: builder.rs  lib.rs  resolve.rs
crates/type-checker/: Cargo.toml
crates/type-checker/src/: body.rs  checker.rs  context.rs  coverage.rs  incremental.rs  lib.rs  lowering.rs  result.rs  trait_env.rs  traits.rs  types.rs
docs/: escape-and-gc.md  grammar.md  traits.md
editors/: lsp-smoke.mjs  package.ps1  package.sh
editors/helix/: languages.toml
editors/intellij/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/intellij/gradle/wrapper/: gradle-wrapper.properties
editors/intellij/src/main/kotlin/org/riddlelang/intellij/: RiddlePlugin.kt
editors/vscode/: README.md  extension.js  language-configuration.json  package-lock.json  package.json
editors/vscode/syntaxes/: riddle.tmLanguage.json
editors/zed/: Cargo.toml  extension.toml
editors/zed/languages/riddle/: config.toml
editors/zed/src/: lib.rs
examples/: cast.rid  example.rid  example2.rid  example3.rid  ffi.rid  index.rid  mutable_test.rid  printf.rid  test_mutref.rid
examples/regressions/: generic_wrap_recursion.rid
src/: main.rs
src/ast/: mod.rs  node.rs  support.rs
src/frontend/: incremental.rs  lexer.rs  parser.rs  syntax_kind.rs  token.rs  tree_builder.rs
src/hir/: body.rs  body_lower.rs  item_tree.rs  lower.rs  lower_items.rs  mod.rs  source_graph.rs
std/: lib.rid  prelude.rid
std/std/: array.rid  clone.rid  cmp.rid  default.rid  fmt.rid  hash.rid  io.rid  iter.rid  marker.rid  mod.rid  ops.rid  option.rid  prelude.rid  result.rid  string.rid  vector.rid
tests/: scope_graph.rs  type_checker.rs
tests/clue/: commands.rs
tests/gc/: runtime.rs
tests/mir/: backend_c.rs  backend_cranelift.rs  backend_js.rs  backend_lua.rs  builder.rs  display.rs  lower.rs  main.rs
tests/move_checker/: basic.rs  borrow.rs  main.rs
tests/riddle_lsp/: unit.rs
tests/riddlec/: cli.rs  pipeline.rs
tests/scope_graph/: basic.rs  hir_lowering.rs  impls.rs  imports.rs  incremental.rs  main.rs  modules.rs
tests/support/: diagnostics.rs
tests/type_checker/: basic.rs  dst.rs  errors.rs  incremental.rs  main.rs  structs.rs  traits.rs  unsafe.rs
