[workspace]
resolver = "2"
members = [
    "app/clue",
    "app/riddle-lsp",
    "app/riddlec",
    "crates/ast",
    "crates/escape-analysis",
    "crates/frontend",
    "crates/gc",
    "crates/hir",
    "crates/mir",
    "crates/move-checker",
    "crates/scope-graph",
    "crates/type-checker",
]
default-members = [
    ".",
    "app/clue",
    "app/riddle-lsp",
    "app/riddlec",
    "crates/ast",
    "crates/escape-analysis",
    "crates/frontend",
    "crates/gc",
    "crates/hir",
    "crates/mir",
    "crates/move-checker",
    "crates/scope-graph",
    "crates/type-checker",
]

[workspace.package]
version = "0.1.1"
edition = "2024"

[package]
name = "riddle"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clue = { path = "app/clue" }
frontend = { path = "crates/frontend" }
hir = { path = "crates/hir" }
lsp-types = "0.94.1"
mir = { path = "crates/mir" }
riddlec = { path = "app/riddlec" }
rowan = "0.15"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync", "time"] }
tower-lsp = "0.20.0"
type-checker = { path = "crates/type-checker" }

[features]
install-bins = []

[[bin]]
name = "clue"
path = "app/clue/src/main.rs"
required-features = ["install-bins"]

[[bin]]
name = "riddle-lsp"
path = "app/riddle-lsp/src/main.rs"
required-features = ["install-bins"]

[[bin]]
name = "riddlec"
path = "app/riddlec/src/main.rs"
required-features = ["install-bins"]

[dev-dependencies]
ast = { path = "crates/ast" }
escape-analysis = { path = "crates/escape-analysis" }
frontend = { path = "crates/frontend" }
hir = { path = "crates/hir" }
mir = { path = "crates/mir" }
move-checker = { path = "crates/move-checker" }
scope-graph = { path = "crates/scope-graph" }
type-checker = { path = "crates/type-checker" }
