[package]
name = "clue"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
gc = { path = "../../crates/gc" }
riddlec = { path = "../riddlec" }
toml = "0.8"

[[test]]
name = "commands"
path = "../../tests/clue/commands.rs"
