[package]
name = "clue"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.4", features = ["derive"] }
gc = { path = "../../crates/gc" }
riddlec = { path = "../riddlec" }
toml = "1"

[[test]]
name = "commands"
path = "../../tests/clue/commands.rs"
