[package]
name = "riddle-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
clue = { path = "../clue" }
frontend = { path = "../../crates/frontend" }
hir = { path = "../../crates/hir" }
lsp-types = "0.94.1"
riddlec = { path = "../riddlec" }
rowan = "0.15"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync", "time"] }
tower-lsp = "0.20.0"
type-checker = { path = "../../crates/type-checker" }
