[package]
name = "riddlec"
version.workspace = true
edition.workspace = true

[dependencies]
ast.workspace = true
escape-analysis.workspace = true
frontend.workspace = true
hir.workspace = true
move-checker.workspace = true
scope-graph.workspace = true
type-checker.workspace = true
mir.workspace = true
rowan.workspace = true
