[package]
name = "riddlec"
version.workspace = true
edition.workspace = true

[dependencies]
ast = { path = "../../crates/ast" }
clap = { version = "4.6.4", features = ["derive"] }
escape-analysis = { path = "../../crates/escape-analysis" }
frontend = { path = "../../crates/frontend" }
hir = { path = "../../crates/hir" }
mir = { path = "../../crates/mir" }
move-checker = { path = "../../crates/move-checker" }
rowan = "0.16.1"
scope-graph = { path = "../../crates/scope-graph" }
type-checker = { path = "../../crates/type-checker" }
